--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <div class="container">
+        <div class="container glass">
           <div class="title"> Calculadora - IMC </div>
 
           <div class="input">
